--- a/main/front.tex
+++ b/main/front.tex
@@ -1,17 +1,18 @@
 \title{
 \includegraphics[width=3.5in]{IMG/HHS.png} \\
-\vspace*{1in}
+\vspace*{2in}
 \textbf{Project 2}\\
-\textit{PVA Zelfrijdende auto}
+\textit{PVA Zelfrijdende auto}\\
+Versie 1
 }
 \author{
-\vspace*{0.3in} \\
+\vspace*{2.5in} \\
   Geschreven door:\\
   Laurens van der Drift\\
   Francisco Ramirez Ramirez\\
   Tommy Dobos\\
   Justin van der Reijden\\
-		\vspace*{1.2in} \\
+		\vspace*{0.5in} \\
 		De Haagse Hogeschool\\
         \textbf{Elektrotechniek}\\
         Delft, Nederland
